[metadata]
name = law-n-runtime
version = 0.1.0
description = LAW-N Runtime Environment (LNRE)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Peace Thabiwa
url = https://github.com/PEACEBINFLOW/law-n-runtime

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    lnre = lnre.core_vm:main
